--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -77,7 +77,7 @@
 
                             <tbody>
                             {% for product in products %}
-                                <tr class="anchorize" data-href="{{ path_for('products') }}/id/{{ product.ProductoID }}">
+                                <tr class="anchorize" data-href="{{ path_for('products/update', {id: product.ProductoID}) }}">
                                     <td>{{ product.CategoriaProductoID }}{{ product.CodigoProducto }}</td>
                                     <td>{{ product.NombreCategoria }}</td>
                                     <td>{{ product.NombreMarca }}</td>
