--- a/app/Views/brands/modifybrand.twig
+++ b/app/Views/brands/modifybrand.twig
@@ -15,7 +15,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">Modifica esta marca de producto</div>
                 <div class="panel-body">
-                    <form action="{{ path_for('brands') }}/id/{{ idMarca }}" method="post">
+                    <form action="{{ path_for('brands/update', {id: idMarca}) }}" method="post">
                         <div class="form-group has-feedback has-clear">
                             <label for="nombreMarca">Nombre de la Marca</label>
                             <input type="text" name="nombreMarca" value="{{ input.nombreMarca }}" class="form-control" id="nombreMarca" maxlength="100">
