--- a/app/Views/empresas/newempresa.twig
+++ b/app/Views/empresas/newempresa.twig
@@ -15,7 +15,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Introduce los datos de contacto de una empresa</div>
                     <div class="panel-body">
-                        <form action="{{ path_for('empresas') }}" method="post">
+                        <form action="{{ path_for('empresas/createform') }}" method="post">
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group has-feedback has-clear">
