--- a/app/Views/products/newproduct.twig
+++ b/app/Views/products/newproduct.twig
@@ -15,7 +15,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Introduce un nuevo producto</div>
                     <div class="panel-body">
-                        <form action="{{ path_for('products') }}" method="post">
+                        <form action="{{ path_for('products/createform') }}" method="post">
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
