--- a/app/Views/products/trasladoproducto.twig
+++ b/app/Views/products/trasladoproducto.twig
@@ -29,7 +29,7 @@
                     {% endfor %}
                 </select>
             </div>
-            <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon glyphicon-transfer"></span> Transferir</button>
+            <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-transfer"></span> Transferir</button>
         </form>
     </div>
 </div>
