--- a/app/Views/products/descuentos.twig
+++ b/app/Views/products/descuentos.twig
@@ -3,7 +3,7 @@
         <h2 class="panel-title">Descuentos aplicables al producto</h2>
     </div>
     <div class="table-responsive">
-        <table class="table table-stripped">
+        <table class="table table-hover">
             {% if not descuentos %}
                 <caption class="bottom-captions text-center">No se encontraron resultados</caption>
             {% endif %}
@@ -15,7 +15,7 @@
             </thead>
             <tbody>
             {% for descuento in descuentos %}
-                <tr>
+                <tr class="anchorize" data-href="{{ path_for('products/descuentos/modify', {'productoID': productID, 'descuentoID': descuento.DescuentoID}) }}">
                     <td>{{ descuento.RazonDescuento }}</td>
                     <td>$ {{ descuento.CantidadDescontada }}</td>
                 </tr>
