Añade script para poder hacer submit de formulario con otros métodos
Ya que por defecto HTML5 solo soporta los métodos POST y GET.

--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -34,5 +34,6 @@
     <script src="/js/link-submit-form.js" defer></script>
     <script src="/js/anchorize.js" defer></script>
     <script src="/js/pubsub.js" defer></script>
+    <script src="/js/submit-form-with-method.js" defer></script>
 </body>
 </html>
