Agrega Mustache para manejo de templates en el cliente

--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -25,6 +25,7 @@
     <!-- jQuery (necesario para los plugins JavaScript de Bootstrap) -->
     <script src="/js/jquery-3.1.0.min.js" defer></script>
     <script src="/js/bootstrap.min.js" defer></script>
+    <script src="/js/mustache.min.js" defer></script>
 </head>
 <body>
     {% include 'templates/navbar.twig' %}
