Agrega botón de cerrar al template de alert

--- a/app/Views/templates/alert.twig
+++ b/app/Views/templates/alert.twig
@@ -1,5 +1,11 @@
 {% verbatim %}
     <script id="alert-template" type="text/template">
-        <div class="alert alert-{{context}}"><span class="glyphicon glyphicon-{{icon}}"></span> {{message}}</div>
+        <div class="alert alert-{{context}} alert-dismissable">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <span class="glyphicon glyphicon-{{icon}}"></span>
+            {{message}}
+        </div>
     </script>
 {% endverbatim %}
