Agrega modal para mostrar opciones al eliminar un descuento

--- a/app/Views/products/modificardescuento.twig
+++ b/app/Views/products/modificardescuento.twig
@@ -3,6 +3,7 @@
 {% block title  %}Modificar Descuento{% endblock %}
 
 {% block content %}
+    {% include 'templates/alert.twig' %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
@@ -12,9 +13,11 @@
                 {% if productSaved is same as(false) %}
                     <div class="alert alert-danger"><span class="glyphicon glyphicon-remove-sign"></span> No se pudo modificar el producto.</div>
                 {% endif %}
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">Modifiar descuento</h2>
+                <div id="alert-group"></div>
+                <div id="panelDescuentos" class="panel panel-primary">
+                    <div class="panel-heading clearfix">
+                        <h2 class="panel-title pull-left">Modifiar descuento</h2>
+                        <button type="button" class="pull-right btn btn-xs btn-danger" data-toggle="modal" data-target="#modal-eliminar-recurso"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
                     </div>
                     <div class="panel-body">
                         <form action="{{ path_for('products/descuentos/modify', {'productoID': productoID, 'descuentoID': descuentoID}) }}" method="post">
@@ -36,6 +39,47 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="modal-eliminar-recurso" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Opciones de Eliminación</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Es seguro eliminar el descuento sin efectos secundarios.</p>
+                        <p>Para continuar, elija una de las siguientes opciones:</p>
+                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                            <div class="panel panel-default">
+                                <div class="panel-heading" role="tab">
+                                    <h4 class="panel-title">
+                                        <a href="#collapse-eliminar-perma" role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="false" aria-controls="collapse-eliminar-perma">
+                                            Eliminar Permanentemente
+                                        </a>
+                                    </h4>
+                                </div>
+                                <div id="collapse-eliminar-perma" class="panel-collapse collapse" role="tabpanel">
+                                    <div class="panel-body">
+                                        <button class="btn btn-danger submit-form-with-method"
+                                                data-dismiss="modal"
+                                                data-action="{{ path_for('products/descuentos/modify', {'productoID': productoID, 'descuentoID': descuentoID}) }}"
+                                                data-method="get"
+                                                data-triggerevent="descuento-eliminar-perma"
+                                                data-targetform="">
+                                            <span class="glyphicon glyphicon-trash"></span>
+                                            Eliminar Permanentemente
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="/js/limitar-input-numerico.js" defer></script>
+    <script src="/js/delete-descuento.js" defer></script>
 {% endblock %}
