Cambia el método HTTP del botón de eliminar descuento de GET a DELETE

--- a/app/Views/products/modificardescuento.twig
+++ b/app/Views/products/modificardescuento.twig
@@ -63,7 +63,7 @@
                                         <button class="btn btn-danger submit-form-with-method"
                                                 data-dismiss="modal"
                                                 data-action="{{ path_for('products/descuentos/modify', {'productoID': productoID, 'descuentoID': descuentoID}) }}"
-                                                data-method="get"
+                                                data-method="delete"
                                                 data-triggerevent="descuento-eliminar-perma"
                                                 data-targetform="">
                                             <span class="glyphicon glyphicon-trash"></span>
