--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -118,7 +118,7 @@
                     </li>
                 </ul>
             </li>
-            {% set contactos_urls = [path_for('empresas/createform'), path_for('providers'), path_for('clientes/personas'), path_for('clientes/empresas'), path_for('clientes/createform')] %}
+            {% set contactos_urls = [path_for('empresas'), path_for('empresas/createform'), path_for('providers'), path_for('clientes/personas'), path_for('clientes/empresas'), path_for('clientes/createform')] %}
             <li class="dropdown {% if uri_path in contactos_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-earphone"></span>
