--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -100,20 +100,20 @@
             <li class="dropdown {% if uri_path in warehouses_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-home"></span>
-                    Bodegas
+                    Almacenes
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
                     <li class="{% if uri_path == path_for('warehouses/createform') %}active{% endif %}">
                         <a href="{{ path_for('warehouses/createform') }}">
                             <span class="glyphicon glyphicon-plus-sign"></span>
-                            Nueva Bodega
+                            Nuevo Almacén
                         </a>
                     </li>
                     <li class="{% if uri_path == path_for('warehouses') %}active{% endif %}">
                         <a href="{{ path_for('warehouses') }}">
                             <span class="glyphicon glyphicon-home"></span>
-                            Ver Bodegas
+                            Ver Almacenes
                         </a>
                     </li>
                 </ul>
