Arregla una etiqueda que hacía falta en modificardescuento.twig

--- a/app/Views/products/modificardescuento.twig
+++ b/app/Views/products/modificardescuento.twig
@@ -73,6 +73,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                     </div>
