Agrega el script para desencadenar eventos en el template base
Así esta disponible en todas las páginas

--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -36,5 +36,6 @@
     <script src="/js/anchorize.js" defer></script>
     <script src="/js/pubsub.js" defer></script>
     <script src="/js/submit-form-with-method.js" defer></script>
+    <script src="/js/click-trigger-event.js" defer></script>
 </body>
 </html>
