Agrega estilo para centrado del texto

--- a/public/css/utility.css
+++ b/public/css/utility.css
@@ -17,3 +17,8 @@
 .anchorize, .trigger-event {
     cursor: pointer;
 }
+
+.center-center {
+    text-align: center !important;
+    vertical-align: middle !important;
+}
