Agrega teléfono a los datos de la empresa que muestra una factura nueva

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -33,7 +33,8 @@
                                             <ul>
                                                 <li><b>Empresa:</b> {{ empresa.nombre }}</li>
                                                 <li><b>Giro:</b> {{ empresa.giro }}</li>
-                                                <li><b>Direccion:</b> {{ empresa.direccion }}</li>`
+                                                <li><b>Direccion:</b> {{ empresa.direccion }}</li>
+                                                <li><b>Teléfono:</b> {{ empresa.telefono }}</li>
                                             </ul>
                                         </div>
                                         <div class="col-sm-6">
