Agrega porcentaje IVA a los datos de la vista de nueva factura

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -6,6 +6,7 @@
 
     <div id="server-data" class="hidden">
         <div id="tipo-factura" data-tipofactura="{{ tipoFactura }}"></div>
+        <div id="porcetaje-iva" data-porcentajeiva="{{ iva }}"></div>
     </div>
 
     {# FACTURA Y DETALLES #}
