Cambia sumas de factura para poner el símbolo de dolar en la vista

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -104,15 +104,15 @@
                                                 </tr>
                                                 <tr>
                                                     <td><b>SUMAS</b></td>
-                                                    <td id="sum-afectas" colspan="2">$ 0.00</td>
+                                                    <td colspan="2">$ <span id="sum-afectas">0.00</span></td>
                                                 </tr>
                                                 <tr>
                                                     <td><b>EXENTAS</b></td>
-                                                    <td id="sum-excentas" colspan="2">$ 0.00</td>
+                                                    <td colspan="2">$ <span id="sum-excentas">0.00</span></td>
                                                 </tr>
                                                 <tr>
                                                     <td><b>TOTAL</b></td>
-                                                    <td colspan="2"><b><span id="sum-total">$ 0.00</span></b></td>
+                                                    <td colspan="2"><b>$ <span id="sum-total">0.00</span></b></td>
                                                 </tr>
                                                 </tfoot>
                                                 <tbody id="listaProductos">
