Agrega clases para mostrar elementos específicos para cada tipo de factura

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <div id="selectClientePersona" class="form-group hidden">
+                                        <div id="selectClientePersona" class="form-group factura-only hidden">
                                             <label for="clientePersonaID">Cliente</label>
                                             <select name="clientePersonaID" class="form-control" id="clientePersonaID">
                                                 <option value="" selected>Elige a un cliente</option>
@@ -59,7 +59,7 @@
                                                 {% endfor %}
                                             </select>
                                         </div>
-                                        <div id="selectClienteContribuyente" class="form-group hidden">
+                                        <div id="selectClienteContribuyente" class="form-group credito-only hidden">
                                             <label for="empresaID">Cliente</label>
                                             <select name="empresaID" id="empresaID" class="form-control">
                                                 <option value="" selected>Elige a un cliente</option>
