--- a/app/Views/empresas/modificarempresa.twig
+++ b/app/Views/empresas/modificarempresa.twig
@@ -62,7 +62,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-plus-sign"></span> Crear Contacto</button>
+                            <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-edit"></span> Modificar Contacto</button>
                         </form>
                     </div>
                 </div>
